Changelog
=========

2.0b2 - unreleased
------------------


2.0b1 - 2010-01-02
------------------

- Don't specify PIL as a direct dependencies. It is not installed as an egg on
  all platforms.
  [hannosch]

2.0a6 - 2009-12-27
------------------

- Respect "show content type icons" setting for collection table view.
  This fixes http://dev.plone.org/plone/ticket/9630.
  [dukebody]

- Removed cmf_klass leftovers from tests.
  [hannosch]

- Removed useless manual tests of the icon names of all types.
  [hannosch]

- Removed overly creative code using access rules in webdav tests.
  [hannosch]

- Added manage_options restriction for new folderish types.
  [hannosch]

- Removed no longer required ATCTContent.manage_options restriction.
  [hannosch]

- Corrected package dependencies.
  [hannosch]

2.0a5 - 2009-12-16
------------------

- Apply patch from mr_savage. Fixes a broken call to normalizeString in 
  atct_topic_view. http://dev.plone.org/plone/ticket/9897
  [esteele]

2.0a4 - 2009-12-03
------------------

- Use "Modify portal content" and "Add portal content" for topic and event 
  instead of the type-specific permissions previously used.
  [esteele]

2.0a3 - 2009-12-03
------------------

- Replace the custom __bobo_traverse__ for handling image scales on ATNewsItem
  and ATImage, because it's still needed for path traversal to scales to work.
  This fixes http://dev.plone.org/plone/ticket/9706.
  [davisagli]

2.0a2 - 2009-12-02
------------------

- Attempt to Acquisition unwrap the context but allow the (potentially)
  wrapped object through if unwrapping fails. This closes
  http://dev.plone.org/old/plone/ticket/9796.
  [matthewwilkes]

- Adjust the reindex tests for the change I just made in Archetypes.
  [davisagli]

- Remove the eventType field and merge it into the subject field.
  Closes http://dev.plone.org/old/plone/ticket/5058.
  [rossp]

2.0a1 - 2009-11-18
------------------
