@@ -4,6 +4,9 @@ Changelog
 2.0b2 - unreleased
 ------------------
 
+- Ported fix for http://dev.plone.org/plone/ticket/7324 - it was not possible
+  to empty Collection's 'text' field. Again fixes #7324
+  [naro]
 
 2.0b1 - 2010-01-02
 ------------------
